--- a/03css/style.css
+++ b/03css/style.css
@@ -74,7 +74,7 @@ li {
 }
 
 /* header {
-  background-color: #f7f7f7;
+  background-color: #f7f7f7;m  
 } */
 
 .main-header {
@@ -133,3 +133,21 @@ a:active {
   background-color: black;
   font-style: italic;
 }
+/* LVHA */
+
+/* Resolving conflict */
+/* #copyright {
+  color: red;
+}
+
+.copyright {
+  color: blue;
+}
+
+.text {
+  color: yellow;
+}
+
+footer p {
+  color: green !important;
+} */
