--- a/03css/style.css
+++ b/03css/style.css
@@ -19,6 +19,7 @@ body {
   padding-right: 40px; */
   padding: 20px 40px;
   margin-bottom: 60px;
+  height: 80px;
 }
 
 nav {
@@ -39,6 +40,7 @@ aside {
   /* padding-top: 50px;
   padding-bottom: 50px; */
   padding: 50px 0;
+  width: 500px;
 }
 
 h1,
@@ -172,6 +174,10 @@ a:active {
   font-style: italic;
 }
 /* LVHA */
+.post-image {
+  width: 100%;
+  height: auto;
+}
 
 /* Resolving conflict */
 /* #copyright {
