--- a/03css/style.css
+++ b/03css/style.css
@@ -11,6 +11,7 @@ body {
 
   border-top: 10px solid #1098ad;
   margin: 0;
+  position: relative;
 }
 
 .container {
@@ -18,6 +19,7 @@ body {
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
+  /* position: relative; */
 }
 
 .main-header {
@@ -39,6 +41,7 @@ article {
 }
 .post-header {
   margin-bottom: 40px;
+  /* position: relative; */
 }
 
 aside {
@@ -193,15 +196,26 @@ nav a:link {
   /* background-color: orangered;
   margin: 20px;
   padding: 20px;
-
+ 
   display: block; */
 
   margin-right: 30px;
   margin-top: 10px;
   display: inline-block;
 }
+
 nav a:link:last-child {
   margin-right: 0;
+}
+
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+
+  position: absolute;
+  bottom: 59px;
+  right: 50px;
 }
 
 /* Resolving conflict */
