--- a/03css/style.css
+++ b/03css/style.css
@@ -287,3 +287,13 @@ h1 {
 nav {
   float: right;
 }
+
+.clear {
+  clear: both;
+}
+
+.clearfix::after {
+  clear: both;
+  content: "";
+  display: block;
+}
