--- a/03css/style.css
+++ b/03css/style.css
@@ -204,7 +204,7 @@ nav a:link {
   display: block; */
 
   margin-right: 30px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   display: inline-block;
 }
 
@@ -234,7 +234,7 @@ h2 {
   position: relative;
 }
 h2::after {
-  content: "TOP";
+  content: 'TOP';
   background-color: #ffe70e;
   color: #444;
   font-size: 16px;
@@ -272,12 +272,12 @@ nav p {
   font size: 18px;
 } */
 /*FLOATS  */
-.author-img {
+/*.author-img {
   float: left;
   margin-bottom: 20px;
 }
 .author {
-  /* padding-left: 80px; */
+  /* padding-left: 80px; 
   float: left;
   margin-top: 10px;
   margin-left: 20px;
@@ -313,4 +313,45 @@ aside {
 
 footer {
   clear: both;
+}
+*/
+
+/* FLEXBOX */
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.author-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.author {
+  margin-bottom: 0;
+  margin-left: 15;
+}
+
+.related-post {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.related-link:link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  margin-bottom: 5px;
+  display: block;
+}
+
+.related-author {
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: italic;
 }
