--- a/03css/style.css
+++ b/03css/style.css
@@ -355,3 +355,23 @@ footer {
   font-weight: normal;
   font-style: italic;
 }
+
+.row {
+  display: flex;
+  align-items: flex-start;
+  gap: 75px;
+  margin-bottom: 60px;
+}
+
+article {
+  flex: 1x;
+  margin-bottom: 0;
+}
+
+aside {
+  /* DEFAULT:
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto; */
+  flex: 0 0 300px;
+}
