--- a/03css/style.css
+++ b/03css/style.css
@@ -29,7 +29,7 @@ body {
   padding-left: 40px;
   padding-right: 40px; */
   padding: 20px 40px;
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
   /* height: 80px; */
 }
 
@@ -39,7 +39,7 @@ nav {
 }
 
 article {
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 .post-header {
   margin-bottom: 40px;
@@ -356,7 +356,8 @@ footer {
   font-style: italic;
 }
 
-.row {
+/* Flexbox layout */
+/* .row {
   display: flex;
   align-items: flex-start;
   gap: 75px;
@@ -369,9 +370,33 @@ article {
 }
 
 aside {
-  /* DEFAULT:
+  DEFAULT:
   flex-grow: 0;
   flex-shrink: 1;
-  flex-basis: auto; */
+  flex-basis: auto;
   flex: 0 0 300px;
+} */
+
+/* CSS GRID LAYOUT */
+.container {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  column-gap: 75px;
+  row-gap: 60px;
+  align-items: start;
+}
+
+.main-header {
+  /* grid-column: 1 / span 2; */
+  grid-column: 1 / -1;
+}
+
+article {
+}
+
+aside {
+}
+
+footer {
+  grid-column: 1 / -1;
 }
